<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:layout_margin="@dimen/_5sdp">
    <LinearLayout
        android:id="@+id/maincard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_weight="1"
        android:background="@drawable/blackcorner"
        android:orientation="horizontal">



        <LinearLayout
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderid"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity:"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencyname"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="Status:"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_orderid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                 />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
               />
            <TextView
                android:id="@+id/tv_sellqty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                />
            <TextView
                android:textAllCaps="true"
                android:id="@+id/tv_currencyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                 />


            <TextView
                android:id="@+id/tv_currencyprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                 />


            <LinearLayout
                android:id="@+id/listatus"
                android:background="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="2dp"
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>





        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/tv_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/grn_rounded"
                android:gravity="left"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/red_rounded"
                android:gravity="left"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
