<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/text_resetPassword"
                android:textColor="@color/colorTextLogin"
                android:textSize="@dimen/_25sdp" />

            <TextView
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/text_resetPassword1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/colorTextLogin2"
                />

            <TextView
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/text_resetPassword2"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/colorTextLogin2"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/bg_edit_round_cornner2">
                <EditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_usernmae"
                    android:fontFamily="@font/lato_bold"
                    android:hint="Email"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/_13sdp"
                    android:padding="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textColorHint="@color/colorTextHintEditText" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/bg_button_red_new"
                    android:padding="@dimen/_13sdp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="left|center"
                        android:layout_gravity="center"
                        android:text="Send"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_22sdp"
                        facebook:tint="#FFFFFF"
                        android:layout_weight="1.5"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_icon_button_new"
                        />
                </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout
        android:gravity="center"
        android:background="@drawable/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/left_arrow"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                facebook:tint="@color/white" />

            <TextView
                android:layout_toRightOf="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="sans-serif-light"
                android:text="Forgot Password"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <EditText
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/et_usernmae"
                android:background="@drawable/bg_edt_round_cornner"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnsignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    facebook:cardCornerRadius="5dp"
                    android:elevation="@dimen/_10sdp"
                    facebook:cardUseCompatPadding="true"
                    facebook:cardPreventCornerOverlap="true"
                    facebook:cardBackgroundColor="@color/light_blue"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_40sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SUBMIT"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:gravity="center"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>-->

</RelativeLayout>